--- a/neutron/index.html
+++ b/neutron/index.html
@@ -1,14 +1,14 @@
 ---
 layout: project
-class: awardstack
-title: Awardstack
+class: neutron
+title: Neutron
 ---
 
 <section class="intro">
-    <img src="/img/awardstack_hover.svg" height="180">
-    <h2 class="h2">Awardstack</h2>
-    <p>Built from the ground up to host, manage, and judge events and competitions.</p>    
-    <a class="btn" href="https://awardstack.com">Visit</a>
+    <img src="/img/neutron_hover.svg" height="180">
+    <h2 class="h2">Neutron</h2>
+    <p>A Sass framework that empowers you to create flexible, clear, and semantic website layouts.</p>    
+    <a class="btn" href="http://neutroncss.com/">Visit</a>
 </section>
 <div class="content">
     
