--- a/simple-scales/index.html
+++ b/simple-scales/index.html
@@ -1,14 +1,14 @@
 ---
 layout: project
-class: awardstack
-title: Awardstack
+class: simple-scales
+title: Simple Scales
 ---
 
 <section class="intro">
-    <img src="/img/awardstack_hover.svg" height="180">
-    <h2 class="h2">Awardstack</h2>
-    <p>Built from the ground up to host, manage, and judge events and competitions.</p>    
-    <a class="btn" href="https://awardstack.com">Visit</a>
+    <img src="/img/simple-scales_hover.svg" height="180">
+    <h2 class="h2">Simple Scales</h2>
+    <p>Simple Scales is an iPhone application that makes regularly enetering your weight into iOS HealthKit data store simple. The app uses a custom-designed input to make entering your data simple and seamless. In addition to saving your mass to HealthKit, Simple Scales also uses your height data to calculate and save your BMI.</p>   
+    <a class="btn" href="https://itunes.apple.com/au/app/simple-scales-weight-tracker/id1144473563?mt=8">Download</a>
 </section>
 <div class="content">
     
