adding footer to homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: homepage
+class: home
 ---
 
 <header class="home-header">
@@ -8,3 +9,7 @@ layout: homepage
 </header>
 
 {% include projects.html %}
+
+<footer class="home-footer frame-element">
+github medium
+</footer>
