style fixes and removed old content

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@ class: home
 {% include projects.html %}
 
 <footer class="home-footer frame-element">
-github medium
+        {% include social-github.html %}
+        {% include social-medium.html %}
 </footer>
