--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ class: home
 
 <header class="home-header">
     <h1 class="h1 site-heading">Christopher Muller</h1>
-    <p>Developing websites and applications with C#, .Net, JavaScript, and Swift</p>
+    <p>Developing websites and applications with C#, .Net, ASP.NET, JavaScript, and Swift</p>
 </header>
 
 {% include projects.html %}
