responsive fixes, copy updates

--- a/awardstack/index.html
+++ b/awardstack/index.html
@@ -8,7 +8,7 @@ title: Awardstack
     <img src="/img/awardstack/icon_color.svg" height="180">
     <h2 class="h2">Awardstack</h2>
     <p>Built from the ground up to host, manage, and judge events and competitions.</p>    
-    <a class="btn" href="https://awardstack.com">Visit</a>
+    <a class="btn" target="_blank" href="https://awardstack.com">Visit Awardstack.com</a>
 </section>
 <div class="content">
     
