--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ class: home
 ---
 
 <header class="home-header">
-    <h1 class="h1 site-heading">Christopher Muller</h1>
-    <p>Developing websites and applications with C#, .Net, ASP.NET, JavaScript, and Swift</p>
+    <h1 class="h1 site-heading">Chris<span class="hide-xs">topher</span> Muller</h1>
+    <p>Developing websites and applications with C#, .Net, ASP.NET, JavaScript, and Swift</p>
 </header>
 
 {% include projects.html %}
