--- a/neutron/index.html
+++ b/neutron/index.html
@@ -7,8 +7,8 @@ title: Neutron
 <section class="intro">
     <img src="/img/neutron/icon_color.svg" height="180">
     <h2 class="h2">Neutron</h2>
-    <p>A Sass framework that empowers you to create flexible, clear, and semantic website layouts.</p>    
-    <a class="btn" href="http://neutroncss.com/">Visit</a>
+    <p>A Sass framework that empowers you to create flexible, clear, and semantic website layouts.</p>    
+    <a class="btn" target="_blank" href="http://neutroncss.com/">Visit Neutroncss.com</a>
 </section>
 <div class="content">
     
