--- a/simple-scales/index.html
+++ b/simple-scales/index.html
@@ -8,7 +8,7 @@ title: Simple Scales
     <img src="/img/simple-scales/icon_color.svg" height="180">
     <h2 class="h2">Simple Scales</h2>
     <p>Simple Scales is an iPhone application that makes regularly enetering your weight into iOS HealthKit data store simple. The app uses a custom-designed input to make entering your data simple and seamless. In addition to saving your mass to HealthKit, Simple Scales also uses your height data to calculate and save your BMI.</p>   
-    <a class="btn" href="https://itunes.apple.com/au/app/simple-scales-weight-tracker/id1144473563?mt=8">Download</a>
+    <a class="btn" target="_blank" href="https://itunes.apple.com/au/app/simple-scales-weight-tracker/id1144473563?mt=8">Download Simple Scales</a>
 </section>
 <div class="content">
 
