--- a/awardstack/index.html
+++ b/awardstack/index.html
@@ -13,7 +13,7 @@ title: Awardstack
 <div class="content">
     
     <section>
-        <h2 class="h2">Problem</h2>
+        <h2 class="h2">Challenge</h2>
         <p>Indesign Media runs several awards throughout the year for different markets in the Design and Architecture space. When I joined Indesign they were using a basic ruby application that had been cloned several times to serve the different requirements of the various awards and events the company ran. When I joined, no one left in the company had any experience with ruby, or the inner workings of the codebase, making any modifications to the code difficult.</p>
         <p>The differing requirements of the various awards led to a situation where the development team was maintaining several slightly different versions of the same old codebase, with inconsistent bugs and functionality between them.</p>
     </section>
