--- a/neutron/index.html
+++ b/neutron/index.html
@@ -13,7 +13,7 @@ title: Neutron
 <div class="content">
     
     <section>
-        <h2 class="h2">Problem</h2>
+        <h2 class="h2">Challenge</h2>
         <p>I created Neutron after using Bootstrap and finding that it was essentially putting styling in the markup instead of in the stylesheet. Created as an open source proof-of-concept of what a modern layout framework would look like Neutron distilled what the core information a framework needs to provide simple to use layout tools.</p>
     </section>
     
