Added social icons to header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,5 @@ class: home
 {% include projects.html %}
 
 <footer class="home-footer frame-element">
-        {% include social-github.html %}
-        {% include social-medium.html %}
+    {% include social-icons.html %}
 </footer>
