resume layout adjustments

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@ title: Christopher Muller's Resume
 <header>
     <h1 class="h2">Resume</h1>
     <strong>Christopher Muller</strong>
+    <a href="/" class="btn view-portfolio">View Portfolio</a>
 </header>
 
 <section>
@@ -97,4 +98,5 @@ title: Christopher Muller's Resume
     <h4 class="h4">Certificate III in Customer Contact</h4>
     <strong>Australian College of Commerce &amp; Management, Datacom Connect</strong>
     
+    <a href="/" class="btn view-portfolio">View Portfolio</a>
 </section>
