added print styles for resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,7 @@ title: Christopher Muller's Resume
 <header>
     <h1 class="h2">Resume</h1>
     <strong>Christopher Muller</strong>
+    <strong class="show-print">http://christophermuller.net/</strong>
     <a href="/" class="btn view-portfolio">View Portfolio</a>
 </header>
 
