resume style fix

--- a/resume/index.html
+++ b/resume/index.html
@@ -99,5 +99,6 @@ title: Christopher Muller's Resume
     <h4 class="h4">Certificate III in Customer Contact</h4>
     <strong>Australian College of Commerce &amp; Management, Datacom Connect</strong>
     
-    <a href="/" class="btn view-portfolio">View Portfolio</a>
+    <div><a href="/" class="btn view-portfolio">View Portfolio</a></div>
+    
 </section>
