added stripe info

--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@ title: Christopher Muller's Resume
     <p>Express.js, Koa.js, Git, React, Redux, Webpack, Vue.js, React Native, Visual Studio, Xcode</p>
 
     <h4 class="h4">Platforms</h4>
-    <p>Linux, AWS, macOS, Windows, iOS</p>
+    <p>Linux, AWS, macOS, Windows, iOS, Stripe payment API</p>
 
 </section>
 
@@ -44,7 +44,7 @@ title: Christopher Muller's Resume
     <p>October 2016 – Current</p>
     
     <ul>
-        <li>Spearheaded the planning and development of new business platforms for use internally and by third parties built with Node.js, PostgreSQL, and Vue.js</li>
+        <li>Spearheaded the planning and development of new business platforms for use internally and by third parties built with Node.js, PostgreSQL, and Vue.js and integrating with the Stripe Connect platform API</li>
         <li>Developed and maintained existing websites built with C# and MS SQL</li>
         <li>Drafted technical and functional specifications of new platform to justify development resources and gain stakeholder approval</li>
         <li>Deciphered application architecture after handoff of application without documentation or internal knowledge of the applications configuration or setup</li>
